--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for a simple expense tracker website using Node.js, Express, and PostgreSQL (Supabase)",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "dev": "node --watch backend/server.js",
+    "start": "node ./backend/server.js",
+    "dev": "node --watch ./backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
